[Feat]: Add UserConfig APIs return grantedPerrmission for user
