# internal/routes/auth.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/billzayy/timesheet-management-be/internal/handlers"
+	"github.com/billzayy/timesheet-management-be/internal/middleware"
 	"github.com/gin-gonic/gin"
 )
 
@@ -10,4 +11,6 @@ func authRoute(r *gin.Engine, h *handlers.Handlers) {
 	{
 		api.POST("/login", h.AuthHandler.Login)
 	}
+
+	r.GET("/api/user-config", middleware.AuthMiddleware(), h.AuthHandler.UserConfig)
 }
